--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,1 +1,9 @@
-<h1>Page Not Found</h1>
+<%- include('includes/head.ejs') %>
+  <body>
+    <%- include('includes/navigation.ejs')%>
+    <main>
+      <h1>Page Not Found</h1>
+    </main>
+  </body>
+</html>
+<%- include('includes/end.ejs')%>
